PCGen-Formula/code/src/java/pcgen/base/formula/parse/FormulaParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. FormulaParser.java */
package pcgen.base.formula.parse;

public class FormulaParser/*@bgen(jjtree)*/implements FormulaParserTreeConstants, FormulaParserConstants {/*@bgen(jjtree)*/
  protected JJTFormulaParserState jjtree = new JJTFormulaParserState();

  final public SimpleNode query() throws ParseException {
                              /*@bgen(jjtree) Root */
  ASTRoot jjtn000 = new ASTRoot(JJTROOT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MINUS:
      case REM:
      case OPENPAREN:
      case FULLSTOP:
      case VARIABLE:
      case INT:
        logicalExpr();
        break;
      default:
        jj_la1[0] = jj_gen;
        ;
      }
      jj_consume_token(0);
                  jjtree.closeNodeScope(jjtn000, true);
                  jjtc000 = false;
                  {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
                  if (jjtc000) {
                    jjtree.clearNodeScope(jjtn000);
                    jjtc000 = false;
                  } else {
                    jjtree.popNode();
                  }
                  if (jjte000 instanceof RuntimeException) {
                    {if (true) throw (RuntimeException)jjte000;}
                  }
                  if (jjte000 instanceof ParseException) {
                    {if (true) throw (ParseException)jjte000;}
                  }
                  {if (true) throw (Error)jjte000;}
    } finally {
                  if (jjtc000) {
                    jjtree.closeNodeScope(jjtn000, true);
                  }
    }
    throw new Error("Missing return statement in function");
  }

/******************************************************************************
 * Add Logical expression and function
 *****************************************************************************/
  final public void logicalExpr() throws ParseException {
                               Operator image;
    equalityExpr();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
      case OR:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
      image = logicalFtn();
                                               ASTLogical jjtn001 = new ASTLogical(JJTLOGICAL);
                                               boolean jjtc001 = true;
                                               jjtree.openNodeScope(jjtn001);
      try {
        equalityExpr();
      } catch (Throwable jjte001) {
                                               if (jjtc001) {
                                                 jjtree.clearNodeScope(jjtn001);
                                                 jjtc001 = false;
                                               } else {
                                                 jjtree.popNode();
                                               }
                                               if (jjte001 instanceof RuntimeException) {
                                                 {if (true) throw (RuntimeException)jjte001;}
                                               }
                                               if (jjte001 instanceof ParseException) {
                                                 {if (true) throw (ParseException)jjte001;}
                                               }
                                               {if (true) throw (Error)jjte001;}
      } finally {
                                               if (jjtc001) {
                                                 jjtree.closeNodeScope(jjtn001,  2);
                                               }
      }
                          ((SimpleNode) jjtree.peekNode()).setOperator(image);
    }
  }

  final public Operator logicalFtn() throws ParseException {
                                  Operator image;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case OR:
      image = orToken();
      break;
    case AND:
      image = andToken();
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                  {if (true) return image;}
    throw new Error("Missing return statement in function");
  }

  final public Operator orToken() throws ParseException {
    jj_consume_token(OR);
                  {if (true) return Operator.OR;}
    throw new Error("Missing return statement in function");
  }

  final public Operator andToken() throws ParseException {
    jj_consume_token(AND);
                  {if (true) return Operator.AND;}
    throw new Error("Missing return statement in function");
  }

/******************************************************************************
 * Add Equality expression and functions
 *****************************************************************************/
  final public void equalityExpr() throws ParseException {
                                Operator image;
    relationalExpr();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EQUAL:
      case NOTEQUAL:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_2;
      }
      image = equalityFtn();
                                                ASTEquality jjtn001 = new ASTEquality(JJTEQUALITY);
                                                boolean jjtc001 = true;
                                                jjtree.openNodeScope(jjtn001);
      try {
        relationalExpr();
      } catch (Throwable jjte001) {
                                                if (jjtc001) {
                                                  jjtree.clearNodeScope(jjtn001);
                                                  jjtc001 = false;
                                                } else {
                                                  jjtree.popNode();
                                                }
                                                if (jjte001 instanceof RuntimeException) {
                                                  {if (true) throw (RuntimeException)jjte001;}
                                                }
                                                if (jjte001 instanceof ParseException) {
                                                  {if (true) throw (ParseException)jjte001;}
                                                }
                                                {if (true) throw (Error)jjte001;}
      } finally {
                                                if (jjtc001) {
                                                  jjtree.closeNodeScope(jjtn001,  2);
                                                }
      }
                          ((SimpleNode) jjtree.peekNode()).setOperator(image);
    }
  }

  final public Operator equalityFtn() throws ParseException {
                                   Operator image;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EQUAL:
      image = equalToken();
      break;
    case NOTEQUAL:
      image = notEqualToken();
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                  {if (true) return image;}
    throw new Error("Missing return statement in function");
  }

  final public Operator equalToken() throws ParseException {
    jj_consume_token(EQUAL);
                  {if (true) return Operator.EQ;}
    throw new Error("Missing return statement in function");
  }

  final public Operator notEqualToken() throws ParseException {
    jj_consume_token(NOTEQUAL);
                  {if (true) return Operator.NEQ;}
    throw new Error("Missing return statement in function");
  }

/******************************************************************************
 * Add Relational expression and functions
 *****************************************************************************/
  final public void relationalExpr() throws ParseException {
                                  Operator image;
    arithmeticExpr();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case GT:
      case LT:
      case GTEQ:
      case LTEQ:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_3;
      }
      image = relationalFtn();
                                                  ASTRelational jjtn001 = new ASTRelational(JJTRELATIONAL);
                                                  boolean jjtc001 = true;
                                                  jjtree.openNodeScope(jjtn001);
      try {
        arithmeticExpr();
      } catch (Throwable jjte001) {
                                                  if (jjtc001) {
                                                    jjtree.clearNodeScope(jjtn001);
                                                    jjtc001 = false;
                                                  } else {
                                                    jjtree.popNode();
                                                  }
                                                  if (jjte001 instanceof RuntimeException) {
                                                    {if (true) throw (RuntimeException)jjte001;}
                                                  }
                                                  if (jjte001 instanceof ParseException) {
                                                    {if (true) throw (ParseException)jjte001;}
                                                  }
                                                  {if (true) throw (Error)jjte001;}
      } finally {
                                                  if (jjtc001) {
                                                    jjtree.closeNodeScope(jjtn001,  2);
                                                  }
      }
                          ((SimpleNode) jjtree.peekNode()).setOperator(image);
    }
  }

  final public Operator relationalFtn() throws ParseException {
                                     Operator image;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LT:
      image = lessThanToken();
      break;
    case GT:
      image = greaterThanToken();
      break;
    case LTEQ:
      image = lessThanOrEqualToToken();
      break;
    case GTEQ:
      image = greaterThanOrEqualToToken();
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                  {if (true) return image;}
    throw new Error("Missing return statement in function");
  }

  final public Operator lessThanToken() throws ParseException {
    jj_consume_token(LT);
                  {if (true) return Operator.LT;}
    throw new Error("Missing return statement in function");
  }

  final public Operator greaterThanToken() throws ParseException {
    jj_consume_token(GT);
                  {if (true) return Operator.GT;}
    throw new Error("Missing return statement in function");
  }

  final public Operator lessThanOrEqualToToken() throws ParseException {
    jj_consume_token(LTEQ);
                  {if (true) return Operator.LE;}
    throw new Error("Missing return statement in function");
  }

  final public Operator greaterThanOrEqualToToken() throws ParseException {
    jj_consume_token(GTEQ);
                  {if (true) return Operator.GE;}
    throw new Error("Missing return statement in function");
  }

/******************************************************************************
 * Add Arithmetic expression and function - addition and subtraction have
 * equal precedence
 *****************************************************************************/
  final public void arithmeticExpr() throws ParseException {
                                  Operator image;
    geometricExpr();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
      case MINUS:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_4;
      }
      image = arithmeticFtn();
                                                  ASTArithmetic jjtn001 = new ASTArithmetic(JJTARITHMETIC);
                                                  boolean jjtc001 = true;
                                                  jjtree.openNodeScope(jjtn001);
      try {
        geometricExpr();
      } catch (Throwable jjte001) {
                                                  if (jjtc001) {
                                                    jjtree.clearNodeScope(jjtn001);
                                                    jjtc001 = false;
                                                  } else {
                                                    jjtree.popNode();
                                                  }
                                                  if (jjte001 instanceof RuntimeException) {
                                                    {if (true) throw (RuntimeException)jjte001;}
                                                  }
                                                  if (jjte001 instanceof ParseException) {
                                                    {if (true) throw (ParseException)jjte001;}
                                                  }
                                                  {if (true) throw (Error)jjte001;}
      } finally {
                                                  if (jjtc001) {
                                                    jjtree.closeNodeScope(jjtn001,  2);
                                                  }
      }
                          ((SimpleNode) jjtree.peekNode()).setOperator(image);
    }
  }

  final public Operator arithmeticFtn() throws ParseException {
                                     Operator image;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PLUS:
      image = plusToken();
      break;
    case MINUS:
      image = minusToken();
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                  {if (true) return image;}
    throw new Error("Missing return statement in function");
  }

  final public Operator plusToken() throws ParseException {
    jj_consume_token(PLUS);
                  {if (true) return Operator.ADD;}
    throw new Error("Missing return statement in function");
  }

  final public Operator minusToken() throws ParseException {
    jj_consume_token(MINUS);
                  {if (true) return Operator.SUB;}
    throw new Error("Missing return statement in function");
  }

/******************************************************************************
 * Add Geometric expression and functions - multiplication and both types of
 * division have equal precedence
 *****************************************************************************/
  final public void geometricExpr() throws ParseException {
                                 Operator image;
    unaryExpr();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MULT:
      case DIV:
      case REM:
        ;
        break;
      default:
        jj_la1[9] = jj_gen;
        break label_5;
      }
      image = geometricFtn();
                                                 ASTGeometric jjtn001 = new ASTGeometric(JJTGEOMETRIC);
                                                 boolean jjtc001 = true;
                                                 jjtree.openNodeScope(jjtn001);
      try {
        unaryExpr();
      } catch (Throwable jjte001) {
                                                 if (jjtc001) {
                                                   jjtree.clearNodeScope(jjtn001);
                                                   jjtc001 = false;
                                                 } else {
                                                   jjtree.popNode();
                                                 }
                                                 if (jjte001 instanceof RuntimeException) {
                                                   {if (true) throw (RuntimeException)jjte001;}
                                                 }
                                                 if (jjte001 instanceof ParseException) {
                                                   {if (true) throw (ParseException)jjte001;}
                                                 }
                                                 {if (true) throw (Error)jjte001;}
      } finally {
                                                 if (jjtc001) {
                                                   jjtree.closeNodeScope(jjtn001,  2);
                                                 }
      }
                          ((SimpleNode) jjtree.peekNode()).setOperator(image);
    }
  }

  final public Operator geometricFtn() throws ParseException {
                                    Operator image;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MULT:
      image = multToken();
      break;
    case DIV:
      image = divToken();
      break;
    case REM:
      image = remToken();
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                  {if (true) return image;}
    throw new Error("Missing return statement in function");
  }

  final public Operator multToken() throws ParseException {
    jj_consume_token(MULT);
                  {if (true) return Operator.MUL;}
    throw new Error("Missing return statement in function");
  }

  final public Operator divToken() throws ParseException {
    jj_consume_token(DIV);
                  {if (true) return Operator.DIV;}
    throw new Error("Missing return statement in function");
  }

  final public Operator remToken() throws ParseException {
    jj_consume_token(REM);
                  {if (true) return Operator.REM;}
    throw new Error("Missing return statement in function");
  }

/******************************************************************************
 * Add Unary expression
 *****************************************************************************/
  final public void unaryExpr() throws ParseException {
                             Token t = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MINUS:
      t = jj_consume_token(MINUS);
      break;
    default:
      jj_la1[11] = jj_gen;
      ;
    }
                                 ASTUnary jjtn001 = new ASTUnary(JJTUNARY);
                                 boolean jjtc001 = true;
                                 jjtree.openNodeScope(jjtn001);
    try {
      exponExpr();
    } catch (Throwable jjte001) {
                                 if (jjtc001) {
                                   jjtree.clearNodeScope(jjtn001);
                                   jjtc001 = false;
                                 } else {
                                   jjtree.popNode();
                                 }
                                 if (jjte001 instanceof RuntimeException) {
                                   {if (true) throw (RuntimeException)jjte001;}
                                 }
                                 if (jjte001 instanceof ParseException) {
                                   {if (true) throw (ParseException)jjte001;}
                                 }
                                 {if (true) throw (Error)jjte001;}
    } finally {
                                 if (jjtc001) {
                                   jjtree.closeNodeScope(jjtn001,  t != null);
                                 }
    }
  }

/******************************************************************************
 * Add Exponential expression
 *****************************************************************************/
  final public void exponExpr() throws ParseException {
                                 /*@bgen(jjtree) #Expon(> 1) */
  ASTExpon jjtn000 = new ASTExpon(JJTEXPON);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      primitiveExpr();
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case POW:
          ;
          break;
        default:
          jj_la1[12] = jj_gen;
          break label_6;
        }
        jj_consume_token(POW);
        primitiveExpr();
                                jjtn000.setOperator(Operator.EXP);
      }
    } catch (Throwable jjte000) {
                  if (jjtc000) {
                    jjtree.clearNodeScope(jjtn000);
                    jjtc000 = false;
                  } else {
                    jjtree.popNode();
                  }
                  if (jjte000 instanceof RuntimeException) {
                    {if (true) throw (RuntimeException)jjte000;}
                  }
                  if (jjte000 instanceof ParseException) {
                    {if (true) throw (ParseException)jjte000;}
                  }
                  {if (true) throw (Error)jjte000;}
    } finally {
                  if (jjtc000) {
                    jjtree.closeNodeScope(jjtn000, jjtree.nodeArity() > 1);
                  }
    }
  }

/******************************************************************************
 * Now we're at the productions that will form the leaves of the tree
 *****************************************************************************/
  final public void primitiveExpr() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case OPENPAREN:
      parenExpr();
      break;
    case FULLSTOP:
    case INT:
      numberExpr();
      break;
    case REM:
    case VARIABLE:
      lookupExpr();
      break;
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void parenExpr() throws ParseException {
                             /*@bgen(jjtree) Paren */
  ASTParen jjtn000 = new ASTParen(JJTPAREN);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(OPENPAREN);
      logicalExpr();
      jj_consume_token(CLOSEPAREN);
    } catch (Throwable jjte000) {
                  if (jjtc000) {
                    jjtree.clearNodeScope(jjtn000);
                    jjtc000 = false;
                  } else {
                    jjtree.popNode();
                  }
                  if (jjte000 instanceof RuntimeException) {
                    {if (true) throw (RuntimeException)jjte000;}
                  }
                  if (jjte000 instanceof ParseException) {
                    {if (true) throw (ParseException)jjte000;}
                  }
                  {if (true) throw (Error)jjte000;}
    } finally {
                  if (jjtc000) {
                    jjtree.closeNodeScope(jjtn000, true);
                  }
    }
  }

  final public void numberExpr() throws ParseException {
                            /*@bgen(jjtree) Num */
                 ASTNum jjtn000 = new ASTNum(JJTNUM);
                 boolean jjtc000 = true;
                 jjtree.openNodeScope(jjtn000);Token t1 = null, t2 = null, t3 = null;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
        t1 = jj_consume_token(INT);
        if (jj_2_1(2)) {
          t2 = jj_consume_token(FULLSTOP);
          t3 = jj_consume_token(INT);
        } else {
          ;
        }
        break;
      case FULLSTOP:
        t1 = jj_consume_token(FULLSTOP);
        t2 = jj_consume_token(INT);
        break;
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
                  jjtree.closeNodeScope(jjtn000, true);
                  jjtc000 = false;
                        String image;
                        if (t3 == null) {
                                if (t2 == null) {
                                        image = t1.image;
                                } else {
                                        image = "." + t2.image;
                                }
                        } else {
                                image = t1.image + "." + t3.image;
                        }
                        jjtn000.setToken(image);
    } finally {
                  if (jjtc000) {
                    jjtree.closeNodeScope(jjtn000, true);
                  }
    }
  }

/******************************************************************************
 * This is the start of the PCGEN specific stuff.  The "Dot separated words"
 * are used for our OS tokens and in some of our predefined variables.
 *****************************************************************************/
  final public void lookupExpr() throws ParseException {
                                        /*@bgen(jjtree) #PCGenLookup(> 1) */
  ASTPCGenLookup jjtn000 = new ASTPCGenLookup(JJTPCGENLOOKUP);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      pcgenSingleWord();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OPENPAREN:
      case OPENBRACKET:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case OPENBRACKET:
          pcgenBracketGroup();
          break;
        case OPENPAREN:
          parenGroup();
          break;
        default:
          jj_la1[15] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[16] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
                  if (jjtc000) {
                    jjtree.clearNodeScope(jjtn000);
                    jjtc000 = false;
                  } else {
                    jjtree.popNode();
                  }
                  if (jjte000 instanceof RuntimeException) {
                    {if (true) throw (RuntimeException)jjte000;}
                  }
                  if (jjte000 instanceof ParseException) {
                    {if (true) throw (ParseException)jjte000;}
                  }
                  {if (true) throw (Error)jjte000;}
    } finally {
                  if (jjtc000) {
                    jjtree.closeNodeScope(jjtn000, jjtree.nodeArity() > 1);
                  }
    }
  }

  final public void pcgenSingleWord() throws ParseException {
                                             /*@bgen(jjtree) PCGenSingleWord */
                             ASTPCGenSingleWord jjtn000 = new ASTPCGenSingleWord(JJTPCGENSINGLEWORD);
                             boolean jjtc000 = true;
                             jjtree.openNodeScope(jjtn000);Token t; Token i = null;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case REM:
        i = jj_consume_token(REM);
        break;
      default:
        jj_la1[17] = jj_gen;
        ;
      }
      t = jj_consume_token(VARIABLE);
                  jjtree.closeNodeScope(jjtn000, true);
                  jjtc000 = false;
                        String image;
                        if (i == null) {
